--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- 자바스크립트 진입점 명시 -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
